# degree-bias-gnn

./: .gitignore  CLAUDE.md  COLUMNS.md  NOTES.md  README.md  RESEARCH.md  RESULTS.md  RESULTS_EMBEDDINGS.md  STRUCTURE.md  TODO.md  analyse_1hop_influence_by_degree.py  analyse_degree1_reachability.py  analyse_degree_group.py  analyse_hop_influence.py  build_node_feature_table.py  checkpoint_utils.py  cleanup_results.sh  config.yaml  dataset.py  dataset_utils.py  degree_bias_notebook.ipynb  export_node_csv.py  generate_report.py  influence.py  jacobian_influence_explainer.tex  logger.py  main.py  metrics.py  plot_utils.py  pyproject.toml  query_degree_group.py  requirements.txt  test.py  tests_graph_symmetry.py  train.py  utils.py
analysis/: 1hop_influence_by_degree.py  degree_group.py  hop_influence.py  node_csv_export.py  node_feature_table.py
configs/: GCNII_Cora.yaml  GCN_Chameleon.yaml  GCN_CiteSeer.yaml  GCN_Computers.yaml  GCN_Cora.yaml  GCN_PubMed.yaml  GCN_Squirrel.yaml  MPNN_Cora.yaml
docs/: COLUMNS.md  NOTES.md  RESEARCH.md  RESULTS.md  TODO.md
models/: __init__.py  gat.py  gcn.py  gcnii.py  graphsage.py  mpnn.py
plots/: _load.py  acc_vs_degree.py  acc_vs_distance.py  class_accuracy.py  labelling_ratio.py  neighborhood_cardinality.py  plot_all.py  purity_vs_degree.py  spl_vs_degree.py  train_neighbor_degree.py
tests/: conftest.py  test_graph_symmetry.py  test_influence.py  test_node_feature_table.py  test_utils.py
