[project]
name = "degbias"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: requires Cora download or model training"]
