[project]
name = "degbias"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "torch>=2.5.0,<2.6",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: requires Cora download or model training"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
